# glastonbury-calculator

./: README.md  pyproject.toml
__tests__/: test_itinerary_optimiser.py  test_lineup_parser.py
__tests__/assets/: short-lineup-parsed.csv  short-lineup-raw.csv
infile/: glastonbury-lineup-2022-parsed.csv  glastonbury-lineup-2022-raw.csv
scripts/: parse_lineup.py
src/: itinerary_optimiser.py  lineup_parser.py
