[tool.poetry]
name = "glastonbury-calculator"
version = "0.1.0"
description = "An optimiser for glastonbury lineups"
authors = ["Toby Dickinson Williams <toby.jay.dickinson@gmail.com>"]
license = "NONE"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
